CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)

FILE(GLOB luasrc src/*.lua)

ADD_TORCH_PACKAGE(pdt ""  "${luasrc}")

INSTALL(DIRECTORY "src/templates" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/pdt")
INSTALL(DIRECTORY "src/types" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/pdt")
